<resources>
    <string name="app_name">VeciApp</string>

    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--ACTIVIDAD REGISTRO-->
    <string name="CrearCuentaTXT">Agregar Residente</string>
    <string name="runEt">RUT</string>
    <string name="NombreEt">Nombre y Apellido</string>
    <string name="CorreoEt">Correo electronico</string>
    <string name="NumeroDeptoEt">Número de departamento</string>
    <string name="CoefcopropiedadEt">Coeficiente de copropiedad</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="M2DptoEt">M2 del departamento</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>

    <!--MENU PRINCIPAL ADMIN-->
    <string name="BienvenidoPrincipal"> Bienvenido(a)</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>


    <string name="AgregarResidente">Agregar Residente</string>
    <string name="Crear_Gasto_Comun">Crear Gasto Común</string>
    <string name="ListarResidentes">Ver Residentes</string>
    <string name="CerrarSesion">Salir</string>
    <string name="Perfil">Mi Perfil</string>
    <string name="AcercaDe">Acerca De</string>

    <!--MENU PRINCIPAL USUARIO -->
    <string name="BienvenidoPrincipalUsuario"> Bienvenido(a) Residente</string>
    <string name="NombresPrincipalUsuario"> -- </string>
    <string name="CorreoPrincipalUsuario"> -- </string>


    <string name="PagarCuentas">Pagar Cuentas</string>
    <string name="Marketplace">MarketPlace</string>
    <string name="ReservaEstacionamiento">Resevar Estacionamientos</string>
    <string name="CerrarSesionU">Salir</string>
    <string name="PerfilU">Mi Perfil</string>
    <string name="AcercaDeU">Acerca De</string>

    <!--ACTIVIDAD LOGIN-->
    <string name="IniciarSesionTXT">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="Ayuda">¿No tienes una cuenta? Contactate con el administrador</string>

    <!--ITEM USUARIO-->
    <string name="Id_Usuario_Listar">ID Usuario</string>
    <string name="ListarNombre">Nombre y Apellido</string>
    <string name="ListarCorreo">Correo electronico</string>

    <!--ACTIVIDAD CREAR GASTO COMUN-->
    <string name="txtTituloGenerar">Generar gastos comunes del mes</string>
    <string name="txtLabelMes">Mes</string>
    <string name="txtLabelAnio">Año</string>
    <string name="EtAnio">Ej: 2025</string>
    <string name="txtLabelTotalEdificio">Total gastos comunes del edificio</string>
    <string name="EtTotalGastosEdificio">Ej: 2450000</string>
    <string name="txtLabelDescripcion">Descripción (opcional)</string>
    <string name="EtDescripcion">Ej: Gastos de octubre (sueldos, mantenciones, luz, agua)</string>
    <string name="txtResumen">Se generarán las deudas para todos los departamentos.</string>
    <string name="btnGenerarGastos">Generar gastos del mes</string>

    <!--ACTIVITY PAGAR CUENTAS -->

    <string name="txtTituloPagar">Mis gastos comunes</string>
    <string name="txtResumenDeuda">Deuda total: $0</string>
    <string name="btnGestionarTarjeta">Gestionar tarjeta / pago automático</string>
    <string name="txtSubtituloCobranzas">Gastos comunes del departamento</string>
    <string name="btnPagarAhora">Pagar ahora</string>

    <!--ACTIVITY RECYCLERVIEW-->
    <string name="txtEstadoPendiente">Pendiente</string>
    <string name="txtEstadoPagado">Pagado</string>
    <string name="txtDescripcionGastos">Gastos del mes (sueldos, mantenciones, luz, agua)</string>
    <string name="txtMesCobranza">Octubre 2025</string>


</resources>