<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/CrearCuentaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:layout_marginTop="60dp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="profile.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NombreEt"
                android:hint="@string/NombreEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_nombres"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/runEt"
                android:hint="@string/runEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_rut"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CorreoEt"
                android:hint="@string/CorreoEt"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_email"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NumeroDeptoEt"
                android:hint="@string/NumeroDeptoEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_numero_apartamento"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/M2DptoEt"
                android:hint="@string/M2DptoEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_m2_depto"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/CoefcopropiedadEt"
                android:hint="@string/CoefcopropiedadEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_coef"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ContraseñaEt"
                android:hint="@string/ContraseñaEt"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ConfirmarContraseñaEt"
                android:hint="@string/ConfirmarContraseñaEt"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>


        <Switch
            android:id="@+id/switchActivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cuenta activa"
            android:fontFamily="@font/worksans"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:checked="true" />

    <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>