<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/BienvenidoPrincipalUsuario"
                    android:textColor="#fff"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:id="@+id/progressBarDatosUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <!--NOMBRES-->
                <TextView
                    android:id="@+id/NombresPrincipalUsuario"
                    android:text="@string/NombresPrincipal"
                    android:visibility="gone"
                    android:textColor="#fff"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!--CORREO-->
                <TextView
                    android:id="@+id/CorreoPrincipalUsuario"
                    android:text="@string/CorreoPrincipal"
                    android:textColor="#fff"
                    android:visibility="gone"
                    android:fontFamily="@font/worksans"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--1 - 2 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">
                <!--OPCION 1 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pagar_cuentas"/>

                    <Button
                        android:id="@+id/Pagar_Cuentas"
                        android:text="@string/PagarCuentas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>


                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--OPCION 2 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/marketplace"/>

                    <Button
                        android:id="@+id/Marketplace"
                        android:text="@string/Marketplace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--3 - 4 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">
                <!--OPCION 3 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/reserva_estacionamiento"/>

                    <Button
                        android:id="@+id/ReservaEstacionamiento"
                        android:text="@string/ReservaEstacionamiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>


                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--OPCION 4 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/perfil"/>

                    <Button
                        android:id="@+id/MiPerfil"
                        android:text="@string/Perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- 5 - 6 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">
                <!--OPCION 5 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/acerca_de"/>

                    <Button
                        android:id="@+id/AcercaDe"
                        android:text="@string/AcercaDe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>


                </androidx.appcompat.widget.LinearLayoutCompat>
                <!--OPCION 6 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/cerrar_sesion"/>

                    <Button
                        android:id="@+id/CerrarSesion"
                        android:text="@string/CerrarSesion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>